Fix spice add button on mobile

--- a/frontend/src/components/RecipeForm/styles.module.css
+++ b/frontend/src/components/RecipeForm/styles.module.css
@@ -74,12 +74,10 @@ label {
 }
 
 .spiceInputRow {
-    display: flex;
-    gap: 10px;
-}
-
-.recipeFormContainer .spiceInputRow {
-    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    gap: 0.4rem;
+    align-items: center;
 }
 
 .removeButton {
